--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,10 @@
   margin-top: 0;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
 .mt-2 {
   margin-top: 2rem;
 }
@@ -829,6 +833,10 @@
 
 .mb-0 {
   margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
 }
 
 .mb-2 {
@@ -1635,6 +1643,10 @@
   margin-left: 0;
 }
 
+.ml-1 {
+  margin-left: 1rem;
+}
+
 .ml-2 {
   margin-left: 2rem;
 }
@@ -2439,6 +2451,10 @@
   margin-right: 0;
 }
 
+.mr-1 {
+  margin-right: 1rem;
+}
+
 .mr-2 {
   margin-right: 2rem;
 }
@@ -3241,6 +3257,10 @@
 
 .m-0 {
   margin: 0;
+}
+
+.m-1 {
+  margin: 1rem;
 }
 
 .m-2 {
