--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,7 @@
 @import "utilities/_typography.scss";
 @import '_mixins.scss';
 @import '_base.scss';
+@import "layouts/_flex.scss";
+@import "layouts/_grid.scss";
 @import '../components/button/_button.scss';
 @import '../components/card/_card.scss';
