--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import '_variables.scss';
 @import "_colors.scss";
 @import "utilities/_spacing.scss";
+@import "utilities/_sizing.scss";
+@import "utilities/_display.scss";
+@import "utilities/_position.scss";
 @import "utilities/_typography.scss";
+@import "utilities/_responsive.scss";
 @import '_mixins.scss';
 @import '_base.scss';
 @import "layouts/_flex.scss";
