--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -52,3 +52,20 @@ $spacing-scale: (
 .mr-auto { margin-right: auto; }
 .mb-auto { margin-bottom: auto; }
 .ml-auto { margin-left: auto; }
+
+// Padding utilities
+@each $key, $value in $spacing-scale {
+  .p-#{$key} { padding: $value; }
+  .pt-#{$key} { padding-top: $value; }
+  .pr-#{$key} { padding-right: $value; }
+  .pb-#{$key} { padding-bottom: $value; }
+  .pl-#{$key} { padding-left: $value; }
+  .px-#{$key} {
+    padding-left: $value;
+    padding-right: $value;
+  }
+  .py-#{$key} {
+    padding-top: $value;
+    padding-bottom: $value;
+  }
+}
