--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,8 @@
 @import "utilities/_display.scss";
 @import "utilities/_position.scss";
 @import "utilities/_typography.scss";
+@import "utilities/_borders.scss";
+@import "utilities/_effects.scss";
 @import "utilities/_responsive.scss";
 @import '_mixins.scss';
 @import '_base.scss';
