--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,8 @@
 @import "layouts/_flex.scss";
 @import "layouts/_grid.scss";
 @import '../components/button/_button.scss';
+@import '../components/forms/_forms.scss';
 @import '../components/card/_card.scss';
+@import '../components/badge/_badge.scss';
+@import '../components/alert/_alert.scss';
+@import '../components/nav/_nav.scss';
