--- a/src/components/forms/_forms.scss
+++ b/src/components/forms/_forms.scss
@@ -206,7 +206,7 @@ textarea.form-control {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(0,0,0,0.25)'/%3e%3c/svg%3e");
     background-position: left center;
     border-radius: 2rem;
-    transition: background-position $transition-fast ease-in-out;
+    transition: background-position $transition-fast;
 
     &:focus {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23206bc4'/%3e%3c/svg%3e");
