--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,10 @@
 @import '../components/badge/_badge.scss';
 @import '../components/alert/_alert.scss';
 @import '../components/nav/_nav.scss';
+@import '../components/table/_table.scss';
+@import '../components/modal/_modal.scss';
+@import '../components/dashboard/_dashboard.scss';
+@import '../components/stats/_stats.scss';
+@import '../components/tabs/_tabs.scss';
+@import '../components/accordion/_accordion.scss';
+@import '../components/dropdown/_dropdown.scss';
